<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <EditText
        android:id="@+id/edNomeRegistro"
        android:layout_width="258dp"
        android:layout_height="77dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edPassRegistro"
        android:layout_width="260dp"
        android:layout_height="74dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edNomeRegistro"
        app:layout_constraintStart_toStartOf="@+id/edNomeRegistro"
        app:layout_constraintTop_toBottomOf="@+id/edNomeRegistro" />

    <EditText
        android:id="@+id/edEmailRegistro"
        android:layout_width="260dp"
        android:layout_height="74dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/edPassRegistro"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edPassRegistro"
        app:layout_constraintTop_toBottomOf="@+id/edPassRegistro" />

    <Button
        android:id="@+id/btCadResgistro"
        android:layout_width="200dp"
        android:layout_height="81dp"
        android:layout_marginTop="76dp"
        android:text="@string/cadastrar"
        app:layout_constraintEnd_toEndOf="@+id/edEmailRegistro"
        app:layout_constraintStart_toStartOf="@+id/edEmailRegistro"
        app:layout_constraintTop_toBottomOf="@+id/edEmailRegistro" />
</androidx.constraintlayout.widget.ConstraintLayout>